renaming farmId to farmNumber and farmAddress in each case
